--- a/wiki/Overview.wiki
+++ b/wiki/Overview.wiki
@@ -1,11 +1,11 @@
 #labels Phase-Requirements
-#A-3 Overview
+= A-3 Overview =
 
-<h2> Introduction </h2>
+== Introduction ==
 
 A-3 is a Java framework that aims to help and simplify the implementation of self-management capabilities in highly dynamic and fully decentralised distributed applications.
 
-<h2> Problem Specification </h2>
+== Problem Specification ==
 <p>
 Typically in enterprise software systems a single well-defined entity or a set of collaborating entities are in charge of providing self-management properties. This is possible because enterprise environments are often characterised by a well known and controlled communicative and informational structure.
 Instead scenarios with an high degree of dynamism and decentralisation make impossible a centralised approach to system management due to the lack of stable and well-defined entities to rely on. 
@@ -21,7 +21,7 @@ The role of A-3 is to address these kind of environments providing the tools to:
 
 A-3 provides the middleware to implement in a totally decentralised environment  a Monitor-Analyse-Plan-Execute control cycle which is at the heart of a self-managing software system.
 
-<h2> Architecture </h2>
+== Architecture ==
 <p>
 In a decentralised component-based system, self-managing behaviour cannot be limited to single components, but each must react and change based on the overall picture. Only trough adaptation at component-level the system can reach a global self-managing behaviour.  
 Therefore, ideally, each component should gather enough and up-to-date information of the system configuration as well as how the other components are behaving. 
